apps/blockbook/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blockbook

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: blockbook
  template:
    metadata:
      labels:
        app: blockbook
    spec:
      containers:
      - name: blockbook
        image: code.liv.io/liv/blockbook
        imagePullPolicy: IfNotPresent
        workingDir: /usr/local/share/blockbook
        ports:
        - name: blockbook
          containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 10000
          runAsUser: 10000
        volumeMounts:
        - name: config
          mountPath: /var/local/blockbook/config
        - name: db
          mountPath: /var/local/blockbook/db
      imagePullSecrets:
      - name: code.liv.io
      volumes:
      - name: config
        emptyDir:
          sizeLimit: 1Mi
      - name: db
        persistentVolumeClaim:
          claimName: db
