apps/blockbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: blockbook
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "myresolver"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bb.liv.io
  rules:
  - host: bb.liv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockbook
            port:
              number: 8080
